--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
